2002-07-19  Lars Clausen  <lrclause@cs.uiuc.edu>

	* configure.in: Simple define of GETTEXT_PACKAGE, and some updates
	of the init stuff.

	* app/render_gdk.c (get_text_width): Fixed use of wrong string.
	Cursor now better.

2002-07-18  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/xfig/xfig-export.c: First use of draw_object render
	function: All shapes are now groups in XFig export.

	* lib/diagramdata.c (normal_render): 
	* lib/render.c: 
	* lib/render.h: 
	* app/display.c (ddisplay_obj_render): 
	New render function for drawing objects, allows renderers to group
	or otherwise specially handle objects.  We may want to reconsider
	calling it in app/display.c, as we 'know' the object draw function
	is the default one there.

	* lib/Makefile.am: Removed extra \ that broke stuff.

	* plug-ins/xfig/xfig-import.c: 
	Spline import for xfig.  Not perfect.

	* objects/standard/create.h: 
	* objects/standard/bezier.c (bezierline_create): 
	* lib/bezier_conn.c: 
	* lib/beziershape.c (beziershape_set_points): 
	* lib/bezier_conn.h: 
	* lib/beziershape.h: 
	Support for creating beziers non-interactively.

2002-07-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/xfig/xfig-import.c: Support for polygons and
	polylines.  Special warning handling system removed.

	* lib/message.c (gtk_message_internal): Fixed bug involving
	closing message window and then getting repeated message.

	* Makefile.am: 
	* autogen.sh: 
	* configure.in (GETTEXT_PACKAGE): 
	Update based on bug #88199.  Hopefully this doesn't break too much
	intl stuff.

	* dia.desktop.in (_Comment): Changed after suggestion from
	calum.benson@ireland.sun.com (bug 88345)

	* app/sheets_dialog_callbacks.c: Fix from Dolores Alia de Saravia
	<loli@unsa.edu.ar> that makes user/system distinction better.

2002-07-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_libart.c: Got the context right, removed crashes.

	* app/commands.c: 
	* app/commands.h: 
	Redraw menu item.

	* app/display.c: 
	* app/display.h: 